<resources>
    <string name="app_name">缓存清理</string>
    <string name="action_per">权限申请</string>
    <string name="action_help">帮助</string>
    <string name="action_about">关于</string>
    <string name="action_add">添加</string>
    <string name="settings">设置</string>
    <string name="only_del_file">只删除文件夹内文件</string>
    <string name="two_ok">二次确认</string>
    <string name="add_rule">添加文件/文件夹/规则调整</string>
    <string name="open_per">权限申请</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>
    <string name="to_alipay">捐赠作者</string>
    <string name="onekey">一键清理</string>
    <string name="appsettings">程序设置</string>
    <string name="wei_tag_object">未选中目标对象</string>
    <string name="tag_info">目标对象属性</string>
    <string name="del_this">清理此目录</string>
    <string name="add_and_close">添加并关闭</string>
    <string name="check_file">检查是否存在</string>
    <string name="please_inut">请输入文件或文件夹路径</string>
    <string name="white_list">白名单规则</string>

    <string name="help_text">

        权限申请:必须先申请权限呦！\n
        添加规则:主页面会检索规则里的所有文件对象\n
        一键清理:一键删除的时候会默认清理所有规则文件对象\n
        白名单规则:可以在一键清理的时候避开白名单文件对象(开发中)\n

        只删除文件夹内文件:文件夹本体不会被删除\n
        二次确认:在执行清理操作时，会提示用户\n

        清理此目录:在主页面选中列表中的文件对象,可以用这个按钮单独清理\n


    </string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="whatyoursee">你要看看我的开源项目地址嘛</string>
    <string name="gotogit">去看看</string>
    <string name="tag_object">目标对象</string>
    <string name="add_white">添加到白名单</string>
    <string name="del_tip">删除提示</string>
    <string name="yaoba">要把</string>
    <string name="yichu">移除嘛</string>
    <string name="all_info">统计信息</string>
    <string name="tip_mess">提示信息</string>
    <string name="nullvalue">啥都没有,去添加个规则吧!</string>


</resources>
